# chains-test

./: Cargo.toml  README.md  run_verify.py  测试覆盖.md
docs/: TRC20测试说明.md  功能与代码结构.md  测试说明.md
src/: config.rs  erc20.rs  main.rs  trc20.rs
